--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ansible"]
 	path = ansible
 	url = git@github.com:kukv/br-cluster-ansible.git
+[submodule "gateway"]
+	path = gateway
+	url = git@github.com:kukv/br-cluster-gateway.git
